--- a/Views/Login.cshtml
+++ b/Views/Login.cshtml
@@ -7,8 +7,9 @@
     <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/css/for_all_pages.css" rel="stylesheet">
     <link href="~/css/login.css" rel="stylesheet">
-    <script src="~/js/DefaultEventsForButtons.js"></script>
-    <script src="~/js/UserLogin.js"></script>
+    <script src="~/js/handlers/DefaultEventsForButtons.js"></script>
+    <script src="~/js/handlers/UserLogin.js"></script>
+    <script src="~/js/orderOfHandlers/ForLogin.js"></script>
 </head>
 <body class="background text-font">
 <header class="d-flex flex-wrap justify-content-between">
