--- a/Views/Registration.cshtml
+++ b/Views/Registration.cshtml
@@ -7,6 +7,7 @@
     <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/css/for_all_pages.css" rel="stylesheet">
     <link href="~/css/registration.css" rel="stylesheet">
+    <script src="~/js/General.js"></script>
     <script src="~/js/handlers/DefaultEventsForButtons.js"></script>
     <script src="~/js/handlers/UserRegistration.js"></script>
     <script src="~/js/orderOfHandlers/ForRegistration.js"></script>
