--- a/Views/Topic.cshtml
+++ b/Views/Topic.cshtml
@@ -7,11 +7,13 @@
     <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/css/topics.css" rel="stylesheet">
     <link href="~/css/for_all_pages.css" rel="stylesheet">
+    <script src="~/js/General.js"></script>
     <script src="~/js/handlers/DefaultEventsForButtons.js"></script>
     <script src="~/js/handlers/AuthUser.js"></script>
     <script src="~/js/handlers/AddToFavorites.js"></script>
     <script src="~/js/handlers/LoadCurrentTopic.js"></script>
     <script src="~/js/handlers/CreateDiscussion.js"></script>
+    <script src="~/js/handlers/LoadDiscussionForCurrentTopic.js"></script>
     <script src="~/js/orderOfHandlers/ForTopic.js"></script>
     <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -81,24 +83,6 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Обсуждение №1</td>
-                        <td>Пользователь №1</td>
-                        <td>dd.mm.yyyy</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Обсуждение №2</td>
-                        <td>Пользователь №2</td>
-                        <td>dd.mm.yyyy</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>Обсуждение №3</td>
-                        <td>Пользователь №3</td>
-                        <td>dd.mm.yyyy</td>
-                    </tr>
                     </tbody>
                 </table>
             </div>
