Update principle of routiong in Controllers, added navigation

--- a/Views/Discussion.cshtml
+++ b/Views/Discussion.cshtml
@@ -8,6 +8,7 @@
     <link href="~/css/discussion.css" rel="stylesheet">
     <link href="~/css/for_all_pages.css" rel="stylesheet">
     <script src="~/js/General.js"></script>
+    <script src="~/js/handlers/Navigation.js"></script>
     <script src="~/js/handlers/DefaultEventsForButtons.js"></script>
     <script src="~/js/handlers/AuthUser.js"></script>
     <script src="~/js/orderOfHandlers/ForDiscussion.js"></script>
@@ -35,9 +36,6 @@
         >>
         <a href="/sections">Разделы</a>
         >>
-        <a href="/section">Раздел №1</a>
-        >>
-        <a href="/discussion">Обсуждение №1</a>
     </div>
     <div id="main-block">
         <div class="content-block user-block">
