--- a/Views/ChangePassword.cshtml
+++ b/Views/ChangePassword.cshtml
@@ -6,6 +6,7 @@
     <title>Восстановление пароля</title>
     <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <script src="~/js/General.js"></script>
+    <script src="~/js/handlers/Navigation.js"></script>
     <link href="~/css/for_all_pages.css" rel="stylesheet">
     <link href="~/css/change_password.css" rel="stylesheet">
     <script src="~/js/handlers/DefaultEventsForButtons.js"></script>
