--- a/Views/Index.cshtml
+++ b/Views/Index.cshtml
@@ -8,6 +8,7 @@
     <link href="~/css/index.css" rel="stylesheet">
     <link href="~/css/for_all_pages.css" rel="stylesheet">
     <script src="~/js/General.js"></script>
+    <script src="~/js/handlers/Navigation.js"></script>
     <script src="~/js/handlers/DefaultEventsForButtons.js"></script>
     <script src="~/js/handlers/AuthUser.js"></script>
     <script src="~/js/orderOfHandlers/ForIndex.js"></script>
