--- a/Views/Login.cshtml
+++ b/Views/Login.cshtml
@@ -8,6 +8,7 @@
     <link href="~/css/for_all_pages.css" rel="stylesheet">
     <link href="~/css/login.css" rel="stylesheet">
     <script src="~/js/General.js"></script>
+    <script src="~/js/handlers/Navigation.js"></script>
     <script src="~/js/handlers/DefaultEventsForButtons.js"></script>
     <script src="~/js/handlers/UserLogin.js"></script>
     <script src="~/js/orderOfHandlers/ForLogin.js"></script>
