--- a/Views/Topic.cshtml
+++ b/Views/Topic.cshtml
@@ -1,22 +1,5 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Раздел №1</title>
-    <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="~/css/topics.css" rel="stylesheet">
-    <link href="~/css/for_all_pages.css" rel="stylesheet">
-    <script src="~/js/General.js"></script>
-    <script src="~/js/handlers/DefaultEventsForButtons.js"></script>
-    <script src="~/js/handlers/AuthUser.js"></script>
-    <script src="~/js/handlers/AddToFavorites.js"></script>
-    <script src="~/js/handlers/LoadCurrentTopic.js"></script>
-    <script src="~/js/handlers/CreateDiscussion.js"></script>
-    <script src="~/js/handlers/LoadDiscussionForCurrentTopic.js"></script>
-    <script src="~/js/orderOfHandlers/ForTopic.js"></script>
-    <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-</head>
 <body class="background text-font">
 <header class="d-flex flex-wrap justify-content-between">
     <div id="my-nav-bar1" class="d-flex flex-wrap align-items-center justify-content-around">
@@ -40,7 +23,6 @@
         >>
         <a href="/topics">Разделы</a>
         >>
-        <a href="/topic">Раздел №1</a>
     </div>
     <div class="d-flex justify-content-between">
         <div id="main-block">
@@ -94,4 +76,22 @@
     © Все права защищены
 </footer>
 </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title></title>
+    <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/css/topics.css" rel="stylesheet">
+    <link href="~/css/for_all_pages.css" rel="stylesheet">
+    <script src="~/js/General.js"></script>
+    <script src="~/js/handlers/Navigation.js"></script>
+    <script src="~/js/handlers/DefaultEventsForButtons.js"></script>
+    <script src="~/js/handlers/AuthUser.js"></script>
+    <script src="~/js/handlers/AddToFavorites.js"></script>
+    <script src="~/js/handlers/LoadCurrentTopic.js"></script>
+    <script src="~/js/handlers/CreateDiscussion.js"></script>
+    <script src="~/js/handlers/LoadDiscussionForCurrentTopic.js"></script>
+    <script src="~/js/orderOfHandlers/ForTopic.js"></script>
+    <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+</head>
 </html>
