--- a/Views/AllTopics.cshtml
+++ b/Views/AllTopics.cshtml
@@ -52,13 +52,12 @@
                     <div id="disc-buttons" class="d-flex justify-content-between flex-wrap">
                         <button id="btn-create-disc" type="button" class="btn btn-dark">Cоздать обсуждение</button>
                         <div class="dropdown">
-                            <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
-                                Новые
+                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                                Сортировать по
                             </button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
-                                <li><a class="dropdown-item active" href="#">Старые</a></li>
-                                <li><a class="dropdown-item" href="#">Макс. кол-во сообщений</a></li>
-                                <li><a class="dropdown-item" href="#">Мин. кол-во сообщений</a></li>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                <li><a class="dropdown-item" href="#">Новизне</a></li>
+                                <li><a class="dropdown-item" href="#">Количеству сообщений</a></li>
                             </ul>
                         </div>
                     </div>
