--- a/Views/Profile.cshtml
+++ b/Views/Profile.cshtml
@@ -12,6 +12,7 @@
     <script src="~/js/handlers/DefaultEventsForButtons.js"></script>
     <script src="~/js/handlers/AuthUser.js"></script>
     <script src="~/js/orderOfHandlers/ForProfile.js"></script>
+    <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
 </head>
 <body class="background text-font">
 <header class="d-flex flex-wrap justify-content-between">
