--- a/Views/AllTopics.cshtml
+++ b/Views/AllTopics.cshtml
@@ -15,8 +15,7 @@
     <script src="~/js/handlers/CreateDiscussion.js"></script>
     <script src="~/js/handlers/LoadAllDiscussions.js"></script>
     <script src="~/js/orderOfHandlers/ForAllTopics.js"></script>
-    <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js">
-    </script>
+    <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
 </head>
 <body class="background text-font">
 <header class="d-flex flex-wrap justify-content-between">
@@ -51,29 +50,28 @@
                     <h3>Обсуждения:</h3>
                     <div id="disc-buttons" class="d-flex justify-content-between flex-wrap">
                         <button id="btn-create-disc" type="button" class="btn btn-dark">Cоздать обсуждение</button>
-                        <div class="dropdown">
-                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                                Сортировать по
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                <li><a class="dropdown-item" href="#">Новизне</a></li>
-                                <li><a class="dropdown-item" href="#">Количеству сообщений</a></li>
-                            </ul>
-                        </div>
+                        <select class="shadow-none form-select" id="selectSort" aria-label="SortingDisc">
+                            <option value="1">Новые</option>
+                            <option value="2">Старые</option>
+                            <option value="3">Max сообщений</option>
+                            <option value="4">Min сообщений</option>
+                        </select>
                     </div>
                 </div>
-                <table id="table-disc" class="table">
-                    <thead>
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Название</th>
-                        <th scope="col">Тег</th>
-                        <th scope="col">Пользователь</th>
-                        <th scope="col">Дата</th>
-                    </tr>
-                    </thead>
-                    <tbody></tbody>
-                </table>
+                <div class="table-responsive">
+                    <table id="table-disc" class="table">
+                        <thead>
+                        <tr class="d-flex">
+                            <th class="col-1">№</th>
+                            <th class="col-3">Название</th>
+                            <th class="col-3">Раздел</th>
+                            <th class="col-3">Пользователь</th>
+                            <th class="col-2">Дата</th>
+                        </tr>
+                        </thead>
+                        <tbody></tbody>
+                    </table>
+                </div>
             </div>
         </div>
         <div id="favorites-block"></div>
