--- a/Views/Topic.cshtml
+++ b/Views/Topic.cshtml
@@ -17,7 +17,6 @@
     <script src="~/js/handlers/LoadDiscussionForCurrentTopic.js"></script>
     <script src="~/js/orderOfHandlers/ForTopic.js"></script>
     <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
 </head>
 <body class="background text-font">
 <header class="d-flex flex-wrap justify-content-between">
@@ -62,30 +61,27 @@
                     <h3>Обсуждения:</h3>
                     <div id="disc-buttons" class="d-flex justify-content-between flex-wrap">
                         <button id="btn-create-disc" type="button" class="btn btn-dark">Cоздать обсуждение</button>
-                        <div class="dropdown">
-                            <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
-                                Новые
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
-                                <li><a class="dropdown-item active" href="#">Старые</a></li>
-                                <li><a class="dropdown-item" href="#">Макс. кол-во сообщений</a></li>
-                                <li><a class="dropdown-item" href="#">Мин. кол-во сообщений</a></li>
-                            </ul>
-                        </div>
+                        <select class="form-select shadow-none" id="selectSort" aria-label="SortingDisc">
+                            <option value="1">Новые</option>
+                            <option value="2">Старые</option>
+                            <option value="3">Max сообщений</option>
+                            <option value="4">Min сообщений</option>
+                        </select>
                     </div>
                 </div>
-                <table id="table-disc" class="table">
-                    <thead>
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Название</th>
-                        <th scope="col">Пользователь</th>
-                        <th scope="col">Дата</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
+                <div class="table-responsive">
+                    <table id="table-disc" class="table">
+                        <thead>
+                        <tr class="d-flex">
+                            <th class="col-1">№</th>
+                            <th class="col-5">Название</th>
+                            <th class="col-3">Пользователь</th>
+                            <th class="col-3">Дата</th>
+                        </tr>
+                        </thead>
+                        <tbody></tbody>
+                    </table>
+                </div>
             </div>
         </div>
         <div id="favorites-block"></div>
