--- a/Views/Profile.cshtml
+++ b/Views/Profile.cshtml
@@ -40,7 +40,7 @@
     <div class="d-flex justify-content-between">
         <div id="first-column">
             <div class="d-flex flex-column user-avatar content-block justify-content-between align-items-center">
-                <img src="~/pictures/avatar.png" height="250" width="250">
+                <img src="~/pictures/avatar.png" height="250" width="250" alt="">
                 <form>
                     <button type="button" formaction="../Views/registration.html" formmethod="get" class="btn btn-dark">Сменить аватар</button>
                 </form>
