--- a/wwwroot/css/discussion.css
+++ b/wwwroot/css/discussion.css
@@ -1,8 +1,4 @@
-﻿.navigation {
-    grid-column: 1 / end;
-}
-
-main {
+﻿main {
     display: grid;
     grid-template-rows: max-content auto;
     grid-template-columns: 90%;
@@ -11,50 +7,84 @@ main {
     justify-content: center;
 }
 
-#main-block {
-    grid-row: 2;
+#disc-block {
+    grid-row: 2 ;
+    width: 120vh;
+    min-height: max-content;
+}
+
+#header-of-disc > h2 {
+    max-width: 75%;
+    word-break: break-all;
+}
+
+#disc-content {
+    height: 500px;
+    overflow-y: auto;
+    border-radius: 10px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: black;
+    background-color: #222121;
+    padding: 20px;
     display: grid;
-    grid-template-rows: repeat(auto-fit, max-content);
-    grid-template-columns: minmax(250px, 10vw) minmax(550px, 70vw);
+    grid-template-rows: repeat(auto-fit, min-content);
     grid-row-gap: 20px;
-    justify-content: space-between;
+    margin-inline: 10px;
 }
 
-.user-block {
-    grid-row: auto;
-    grid-column: 1;
-    margin-right: 20px;
+.another-user-message {
+    height: min-content;
 }
 
-.user-block > span {
-    color: #DBDBDB;
+.your-message {
+    height: min-content;
 }
 
-.answer-block {
-    grid-row: auto;
-    grid-column: 2;
+.message-block {
+    width: 50%;
+    max-height: min-content;
+    border-radius: 10px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: black;
+    background-color: #2A2A2A;;
+    padding: 15px;
+    text-align: justify;
+    white-space: pre-wrap;
 }
 
-#disc-buttons {
-    grid-row: auto;
-    grid-column: 1 / end;
-    justify-self: center;
-    min-width: 35%;
-}
 
-#add-answer {
-    flex-basis: max-content;
-    margin-right: 10px;
-}
-
-#create-disc {
-    flex-basis: max-content;
+.another-user-message > .message-block {
     margin-left: 10px;
 }
 
-.btn-answer-create {
-    font-size: 1.2rem;
+.your-message > .message-block {
+    margin-right: 10px;
 }
+
+.another-user-message > a > img, .your-message > a > img {
+    border-radius: 30px;
+}
+
+#messageText {
+    height: 45px;
+    width: 85%;
+    overflow: hidden;
+    resize: none;
+}
+
+#send-message {
+    margin-top: 30px;
+    margin-inline: 10px;
+}
+
+#send-message > button {
+    height: 50px;
+    max-height: 500px;
+}
+
+
 
 
 
