--- a/wwwroot/css/topics.css
+++ b/wwwroot/css/topics.css
@@ -22,44 +22,6 @@
     grid-column: 1;
 }
 
-label[for="btn-add-to-favorites"] {
-    height: 40px;
-    width: 40px;
-    background-color: #222121;
-    color: #DBDBDB;
-    border-radius: 5px;
-    border-color: black;
-    font-style: normal;
-    padding: 9px;
-}
-
-label[for="btn-add-to-favorites"] > svg {
-    display: block;
-}
-
-.checkbox-temporary-mark > svg {
-    fill: #DBDBDB;
-    animation-name: ch;
-    animation-duration: 0.5s;
-}
-
-.checkbox-checked > svg {
-    fill: red;
-}
-
-.checkbox-unchecked {
-    fill: #DBDBDB;
-}
-.checkbox-unchecked:hover > svg {
-    fill: red;
-}
-
-@keyframes ch {
-    0% {fill: red}
-    50% {fill: red}
-    100% {fill: #DBDBDB}
-}
-
 #list-of-topics {
     display: grid;
     grid-template-rows: repeat(auto-fill, minmax(50px, auto));
@@ -85,7 +47,7 @@ label[for="btn-add-to-favorites"] > svg {
     margin-bottom: 20px;
 }
 
-#header-of-desc > h3 {
+#header-of-disc > h3 {
     max-width: 20%;
     align-self: center;
 }
@@ -97,6 +59,17 @@ label[for="btn-add-to-favorites"] > svg {
 
 #btn-create-disc {
     margin-right: 30px;
+}
+
+#selectSort {
+    box-shadow: #FFFFFF;
+    color: aliceblue;
+    background-color: #222121;;
+    border-width: 2px;
+    border-radius: 10px;
+    border-color: black;
+    font-style: normal;
+    max-width: max-content;
 }
 
 .dropdown-menu {
@@ -146,19 +119,4 @@ ul.dropdown-menu > li > a {
 .question-of-new-disc > textarea {
     max-height: 250px;
     min-height: 80px;
-}
-
-.sort-buttons {
-    margin-bottom: 10px;
-}
-
-#selectSort {
-    box-shadow: #FFFFFF;
-    color: aliceblue;
-    background-color: #222121;;
-    border-width: 2px;
-    border-radius: 10px;
-    border-color: black;
-    font-style: normal;
-    max-width: max-content;
 }
