--- a/Views/Discussion.cshtml
+++ b/Views/Discussion.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Обсуждение №1</title>
+    <title></title>
     <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/css/discussion.css" rel="stylesheet">
     <link href="~/css/for_all_pages.css" rel="stylesheet">
