Added adding to favorities and loading this on front

--- a/Views/AllTopics.cshtml
+++ b/Views/AllTopics.cshtml
@@ -8,7 +8,6 @@
     <link href="~/css/topics.css" rel="stylesheet">
     <link href="~/css/for_all_pages.css" rel="stylesheet">
     <script src="~/js/General.js"></script>
-    <script src="~/js/handlers/Navigation.js"></script>
     <script src="~/js/handlers/DefaultEventsForButtons.js"></script>
     <script src="~/js/handlers/AuthUser.js"></script>
     <script src="~/js/handlers/LoadTopics.js"></script>
@@ -46,7 +45,7 @@
                 <div id="list-of-topics"></div>
             </div>
             <div id="discussing-block" class="d-flex flex-column content-block">
-                <div id="header-of-disc" class="d-flex justify-content-between">
+                <div id="header-of-discussions" class="d-flex justify-content-between">
                     <h3>Обсуждения:</h3>
                     <div id="disc-buttons" class="d-flex justify-content-between flex-wrap">
                         <button id="btn-create-disc" type="button" class="btn btn-dark">Cоздать обсуждение</button>
