--- a/wwwroot/css/discussion.css
+++ b/wwwroot/css/discussion.css
@@ -13,7 +13,7 @@
     min-height: max-content;
 }
 
-#header-of-disc > h2 {
+#header-of-discussion > h2 {
     max-width: 75%;
     word-break: break-all;
 }
@@ -50,8 +50,6 @@
     border-color: black;
     background-color: #2A2A2A;;
     padding: 15px;
-    text-align: justify;
-    white-space: pre-wrap;
 }
 
 
@@ -67,11 +65,22 @@
     border-radius: 30px;
 }
 
-#messageText {
+#messageContent {
     height: 45px;
     width: 85%;
     overflow: hidden;
     resize: none;
+}
+
+.author-message {
+    font-size: 0.9rem;
+    font-style: oblique;
+    color: red;
+}
+
+.message-text {
+    text-align: justify;
+    white-space: pre-wrap;
 }
 
 #send-message {
