--- a/wwwroot/css/for_all_pages.css
+++ b/wwwroot/css/for_all_pages.css
@@ -104,10 +104,30 @@ header {
 }
 
 .btn-dark, .btn-danger {
-    border-width: 2px;
+    border-width: 1px;
     border-radius: 10px;
     border-color: black;
     font-style: normal;
+}
+
+.btn-remove {
+    background-color: #2A2A2A;
+    border-width: 1px;
+    border-radius: 5px;
+    border-color: black;
+    font-style: normal;
+}
+
+.btn-remove:hover > svg {
+    fill: black;
+}
+
+.btn[disabled] {
+    color: #DBDBDB;
+    background-color: #222121;
+    border-width: 1px;
+    border-style: solid;
+    border-color: black;
 }
 
 .btn-dark {
@@ -151,27 +171,31 @@ img[alt=Главная]{
     border-width: 1px;
     border-color: black;
     box-shadow: 1px 0 5px black, -1px 0 5px black;
-    padding: 20px;
+    padding: 30px;
     text-align: justify;
 }
 
 #favorites-block {
-    flex-basis: 22%;
     align-self: start;
-    max-width: 25%;
+    width: 22%;
     justify-self: center;
+    overflow-y: auto;
 }
 
-#links-for-favorites{
+#links-for-favorites > ul {
     padding-left: 20px;
 }
 
+#links-for-favorites > ul > div {
+    margin-bottom: 15px;
+}
 
-#links-for-favorites > li > a {
-    display: block;
+#links-for-favorites > ul > li, #links-for-favorites > ul > div > li  {
+    list-style-position: inside;
     overflow: hidden;
-    white-space: nowrap;
     text-overflow: ellipsis;
+    white-space: nowrap;
+    text-align: left;
 }
 
 footer {
@@ -191,7 +215,7 @@ footer {
     align-self: center;
 }
 
-label[for="btn-add-to-favorites"] {
+label[for="isFavorite"] {
     height: 40px;
     width: 40px;
     background-color: #222121;
@@ -202,7 +226,7 @@ label[for="btn-add-to-favorites"] {
     padding: 9px;
 }
 
-label[for="btn-add-to-favorites"] > svg {
+label[for="isFavorite"] > svg {
     display: block;
 }
 
@@ -232,4 +256,27 @@ label[for="btn-add-to-favorites"] > svg {
 textarea {
     overflow: hidden;
     resize: none;
+}
+
+input[type=text]:not(:focus), input[type=password]:not(:focus), input[type=search]:not(:focus) {
+    background-color: rgba(28, 26, 26, 0.3);
+    border-color: black;
+    color: aliceblue;
+
+}
+
+textarea:not(:focus) {
+    background-color: rgba(28, 26, 26, 0.3);
+    border-color: black;
+    color: aliceblue;
+}
+
+.modal-content {
+    background-color: #2A2A2A;
+    border-radius: 15px;
+    border-width: 1px;
+    border-color: black;
+    box-shadow: 1px 0 5px black, -1px 0 5px black;
+    text-align: justify;
+    font-size: 1.1rem;
 }
